WIP: UI - updated service target
