# wanaku-router/wanaku-router-backend/src/main/webui/openapi.json
@@ -2031,8 +2031,18 @@
           }
         } ],
         "responses" : {
-          "204" : {
-            "description" : "No Content"
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "text/event-stream" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/OutboundSseEvent"
+                  }
+                }
+              }
+            }
           }
         },
         "summary" : "Stream Results",
